packages/typ/tests/fixtures/diagnostics/0431_modules_manifest_type_mismatch_03.ml
module P : sig
  type t = bool
  val x : t
end = struct
  type t = int
  let x = 2
end
